--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -494,7 +494,7 @@ textarea {
 --------------------*/
 .no-reset {
   * {
-    line-height: normal !important;
+    line-height: normal;
   }
 
   html {
