--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -10,5 +10,5 @@
 // Font Family
 $font-base: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
 // $font-base: "Noto Sans JP", sans-serif;
-// $font-a: 'EB Garamond', serif;
-// $font-b: Arial, "Helvetica Neue", Helvetica, sans-serif;
+$font-a: 'EB Garamond', serif;
+$font-b: Arial, "Helvetica Neue", Helvetica, sans-serif;
