--- a/src/assets/scss/components/_parts.scss
+++ b/src/assets/scss/components/_parts.scss
@@ -2,233 +2,14 @@
 /* -------------------
   PARTS
 --------------------*/
-
-// Format layout
-.align-center {
-  text-align: center;
-}
-
-.align-left {
-  text-align: left;
-}
-
-.align-right {
-  text-align: right;
-}
-
-
-// Title
-.section-title {
-  display: inline-block;
-  position: relative;
-  padding-bottom: 10px;
-  font-size: fs(38);
-  line-height: fs(57);
-  font-family: $font-a;
-  @include mq() {
-  	padding-bottom: 6px;
-	  font-size: fs(30);
-	  line-height: fs(45);
-  }
-
-  &:after {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 6px;
-    background: url(../images/common/bg-line-green01.jpg) left bottom / contain repeat-x;
-    content: "";
-  }
-
-  &.orange {
-    &:after {
-      background-image: url(../images/common/bg-line-orange.jpg);
-    }
-  }
-
-  span {
-    display: inline-block;
-    font-size: fs(14);
-    font-family: $font-base;
-    font-weight: bold;
-    line-height: 1;
-    margin-left: 10px;
-    @include mq() {
-		  font-size: fs(12);
-	  }
-  }
-}
-
-.section-title2 {
-  display: inline-block;
-  font-size: fs(38);
-  line-height: fs(30);
-  font-family: $font-a;
-
-  span {
-    display: inline-block;
-    font-size: fs(14);
-    font-family: $font-base;
-    font-weight: bold;
-    line-height: 1;
-    @include mq() {
-    	margin-left: 8px;
-		  font-size: fs(12);
-	  }
-  }
-}
-
-.sectionEP-title {
-  display: inline-block;
-  position: relative;
-  padding-left: 24px;
-  font-size: fs(24);
-  font-weight: bold;
-  color: #7B7B6C;
-  line-height: fs(38);
-  @include mq() {
-    font-size: fs(20);
-    line-height: fs(30);
-  }
-
-  &:before {
-    display: block;
-    position: absolute;
-    top: calc(50% - 5px);
-    left: 0;
-    width: 12px;
-    height: 10px;
-    background: url(../images/common/icon-list-gray.svg) left center / contain no-repeat;
-    content: "";
-  }
-
-  &.ranking {
-    &:before {
-      width: 13px;
-      height: 10px;
-      top: calc(50% - 6px);
-      background-image: url(../images/common/icon-ranking-gray.svg);
-    }
-  }
-  &.fork {
-    &:before {
-      width: 11px;
-      height: 14px;
-      top: calc(50% - 6px);
-      background-image: url(../images/common/icon-fork-gray.svg);
-    }
-  }
-  &.type2 {
-    padding-left: 0;
-    &:before {
-      display: none;
-    }
-  }
-}
-
-.titleLv2 {
-  display: inline-block;
-  position: relative;
-  padding-bottom: 15px;
-  font-size: fs(20);
-  line-height: fs(30);
-  font-weight: bold;
-  font-family: $font-base;
-  @include mq() {
-    padding-bottom: 12px;
-    font-size: fs(18);
-    line-height: fs(27);
-  }
-
-  &:after {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 6px;
-    background: url(../images/common/bg-line-green01.jpg) left bottom / contain repeat-x;
-    content: "";
-  }
-}
-
-.titleLv3 {
-  position: relative;
-  padding-bottom: 15px;
-  font-size: fs(20);
-  line-height: fs(30);
-  font-weight: bold;
-  font-family: $font-base;
-  @include mq() {
-    padding-bottom: 12px;
-    font-size: fs(18);
-    line-height: fs(27);
-  }
-
-  &:after {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 34px;
-    height: 2px;
-    background: #D3D940;
-    content: "";
-  }
-}
-
-.titleLv4 {
-  font-size: fs(18);
-  line-height: fs(27);
-  font-weight: bold;
-  font-family: $font-base;
-  @include mq() {
-    font-size: fs(16);
-    line-height: fs(24);
-  }
-}
-
-.titleLv5 {
-  font-size: fs(14);
-  line-height: fs(21);
-  font-weight: bold;
-  font-family: $font-base;
-  @include mq() {
-    font-size: fs(12);
-    line-height: fs(18);
-  }
-}
-
-.desc {
-  font-size: fs(14);
-  line-height: fs(21);
-  @include mq() {
-    font-size: fs(12);
-    line-height: fs(18);
-  }
-}
-
-.date {
-  margin-right: 10px;
-  font-family: $font-a;
-  font-size: fs(12);
-  line-height: fs(18);
-  @include mq() {
-  	font-size: fs(10);
-	  line-height: fs(15);
-  }
-
-  &.big {
-    font-size: fs(14);
-    line-height: fs(21);
-    @include mq() {
-	  	font-size: fs(12);
-		  line-height: fs(18);
-	  }
-  }
-}
+@import "parts/distance";
+@import "parts/text";
+@import "parts/table";
+@import "parts/form";
+@import "parts/layout";
+@import "parts/pagination";
+@import "parts/breadcrumb";
+@import "parts/image";
 
 
 // Tag, Label
@@ -499,7 +280,7 @@
   font-size: fs(14);
   font-weight: bold;
   color: #7B7B6C;
-  background: url(../images/common/all-icon.svg) no-repeat top center;
+  background: url(../images/common/icon-all.svg) no-repeat top center;
   background-size: 18px 18px;
 }
 
@@ -644,211 +425,6 @@
   }
 }
 
-// Form, input, checkbox
-.form-one {
-  position: relative;
-}
-
-.input {
-  display: block;
-  width: 100%;
-  height: 38px;
-  padding: 10px 40px 10px 16px;
-  color: #7B7B6C;
-  background-color: #FAFCD7;
-  border: 1px solid #C7C7C7;
-  border-radius: 2px;
-  font-size: fs(12);
-  transition: all .3s;
-  font-family: $font-base;
-  font-weight: bold;
-  &:focus,
-  &.active {
-    border-color: #000;
-    background-color: #fff;
-    color: #000;
-  }
-  &.textarea {
-    height: 140px;
-  }
-}
-
-.checkbox {
-  position: absolute; // take it out of document flow
-  opacity: 0; // hide it
-
-  &+label {
-    position: relative;
-    cursor: pointer;
-    padding: 0 0 0 38px;
-  }
-
-  // Box.
-  &+label:before {
-    top: -5px;
-    left: 0;
-    position: absolute;
-    margin-right: 10px;
-    display: inline-block;
-    vertical-align: text-top;
-    width: 30px;
-    height: 30px;
-    background: #FAFCD7;
-    border: 1px solid #C7C7C7;
-    border-radius: 3px;
-    content: '';
-    @include mq() {
-    	top: -8px;
-  	}
-  }
-  &:checked + label:before {
-    background-color: #7B7B6C;
-    border-color: #7B7B6C;
-  }
-
-  // Disabled state label.
-  &:disabled+label {
-    color: #b8b8b8;
-    cursor: auto;
-  }
-
-  // Disabled box.
-  &:disabled+label:before {
-    box-shadow: none;
-    background: #ddd;
-  }
-
-  // Checkmark. Could be replaced with an image
-  &:checked+label:after {
-    content: '';
-    position: absolute;
-    left: 10px;
-    top: 9px;
-    background: #FAFCD7;
-    width: 2px;
-    height: 2px;
-    box-shadow:
-      2px 0 0 #FAFCD7,
-      4px 0 0 #FAFCD7,
-      4px -2px 0 #FAFCD7,
-      4px -4px 0 #FAFCD7,
-      4px -6px 0 #FAFCD7,
-      4px -8px 0 #FAFCD7;
-    transform: rotate(45deg);
-    @include mq() {
-    	top: 6px;
-  	}
-  }
-}
-
-.search {
-  position: absolute;
-  top: calc(50% - 7px);
-  right: 16px;
-  display: inline-block;
-  width: 14px;
-  height: 14px;
-  border: none;
-  background: url(../images/common/icon-search.svg) 100% 100% no-repeat;
-  content: "";
-}
-
-.form-search {
-  .input {
-    margin-bottom: 4px;
-    padding: 10px 40px 10px 16px;
-    cursor: pointer;
-    font-family: $font-base;
-  }
-
-  select {
-    font-weight: bold;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-          appearance: none;
-    background: #FAFCD7 url(../images/common/icon-arrow-down-gray.png) right 15px center / 8px 7px no-repeat;
-    font-family: $font-base;
-    &:focus {
-      background: #fff url(../images/common/icon-arrow-up-gray.png) right 15px center / 8px 7px no-repeat;
-      @include mq() {
-        background-position: right 8px center;
-      }
-    }
-
-    &.active {
-      border-color: #000;
-      color: #000;
-      background: #fff url(../images/common/icon-arrow-down-gray.png) right 15px center / 8px 7px no-repeat;
-      &:focus {
-        background: #fff url(../images/common/icon-arrow-up-gray.png) right 15px center / 8px 7px no-repeat;
-        @include mq() {
-          background-position: right 8px center;
-        }
-      }
-    }
-
-    &:-moz-focusring {
-      color: transparent;
-      text-shadow: 0 0 0 #000;
-    }
-
-    &::-ms-expand {
-        display: none;
-    }
-  }
-
-  .btn-gray {
-    width: 49%;
-  }
-}
-
-.selectMulti {
-  width: auto;
-  min-width: 100px;
-  padding: 12px 46px 12px 16px;
-  height: 48px;
-  font-weight: bold;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-        appearance: none;
-  font-family: $font-base;
-  background-image: url(../images/common/icon-arrow-up-gray.png), url(../images/common/icon-arrow-down-gray.png);
-  background-position: right 15px top 10px, right 15px top 28px;
-  background-repeat: no-repeat;
-  background-size: 8px 7px;
-
-  @include mq() {
-    width: 100%;
-  }
-
-  &.active {
-    border-color: #000;
-    color: #000;
-    background-color: #fff;
-    background-image: url(../images/common/icon-arrow-up-gray.png), url(../images/common/icon-arrow-down-gray.png);
-  }
-
-
-  &:-moz-focusring {
-    color: transparent;
-    text-shadow: 0 0 0 #000;
-  }
-
-  &::-ms-expand {
-      display: none;
-  }
-}
-
-.form-action {
-  display: flex;
-  justify-content: space-between;
-}
 
 
 // Pickup, Item
@@ -983,77 +559,6 @@
   }
 }
 
-.ranking-item {
-  margin-bottom: 10px;
-  counter-increment: ranking-counter;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-
-  a {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &:nth-child(1) {
-    .ranking-item--thumb {
-      &:before {
-        background-color: #A2971A;
-      }
-    }
-  }
-
-  &:nth-child(2) {
-    .ranking-item--thumb {
-      &:before {
-        background-color: #7B7B7B;
-      }
-    }
-  }
-
-  &:nth-child(3) {
-    .ranking-item--thumb {
-      &:before {
-        background-color: #574A31;
-      }
-    }
-  }
-
-  &--thumb {
-    position: relative;
-    width: 102px;
-    height: 68px;
-    overflow: hidden;
-
-    &:before {
-      position: absolute;
-      top: 0;
-      left: 0;
-      display: inline-block;
-      width: 18px;
-      height: 18px;
-      font-size: fs(12);
-      font-weight: bold;
-      font-family: $font-b;
-      line-height: 18px;
-      text-align: center;
-      color: #fff;
-      background-color: #000;
-      content: counter(ranking-counter);
-    }
-  }
-
-  &--cnt {
-    display: flex;
-    align-items: center;
-    width: calc(100% - 122px);
-    font-size: fs(12);
-    line-height: fs(18);
-    font-weight: bold;
-  }
-}
-
 .recipe-item {
   display: inline-block;
   padding-left: 20px;
@@ -1067,8 +572,6 @@
     background: url(../images/common/icon-time-yellow.svg) left center / 20px 22px no-repeat;
   }
 }
-
-
 
 //  pickup List
 .pickupList {
@@ -1155,238 +658,4 @@
     }
   }
 
-}
-
-
-// pagination
-.pagination {
-  margin: 70px auto 20px;
-
-  @include mq() {
-    margin: 35px auto 50px;
-  }
-
-  &-label {
-    margin-bottom: 7px;
-    font-size: fs(10);
-    color: #000;
-    text-align: center;
-  }
-
-  &-list {
-    display: flex;
-    text-align: center;
-    flex-flow: wrap;
-    justify-content: center;
-
-    a {
-      width: fs(30);
-      height: fs(30);
-      display: flex;
-      margin: 0 fs(2);
-      justify-content: center;
-      align-items: center;
-      border: 1px solid #C7C7C7;
-      border-radius: 3px;
-      background-color: #fff;
-      color: #585757;
-      font-size: fs(12);
-      letter-spacing: 0;
-      line-height: 1.4;
-      transition: all .3s;
-
-      @include mq() {
-        margin-bottom: 5px;
-      }
-
-      &:hover {
-        background-color: #7B7B6C;
-        color: #fff;
-      }
-
-      &.active {
-        background-color: #7B7B6C;
-        color: #fff;
-        pointer-events: none;
-      }
-
-      &.ctrl {
-        padding: 0 11px;
-        &:hover {
-          svg {
-            .a {
-              fill: #fff;
-            }
-          }
-        }
-        &.prev {
-          margin-right: 8px;
-        }
-
-        &.next {
-          margin-left: 8px;
-        }
-      }
-    }
-  }
-
-  &-spacer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: .875rem;
-    color: #919191;
-    margin: .125rem .0625rem;
-    height: 100%;
-  }
-}
-
-
-// breadcrumb
-
-.breadcrumb {
-  @include mq() {
-    white-space: nowrap;
-    overflow-x: auto;
-  }
-  &Wrap {
-    padding-top: 15px;
-    @include mq() {
-      padding: 0 0 5px 0; 
-    }
-  }
-  ul {
-    li {
-      display: inline-block;
-      font-size: fs(12);
-      position: relative;
-      padding-right: 20px;
-      color: #000;
-      &:first-child {
-        a {
-          display: inline-block;
-          color: #7B7B6C;
-          text-decoration: underline;
-          transition: all .3s;
-          &:hover {
-            text-decoration: none;
-          }
-        }
-      }
-      &:last-child {
-        padding-right: 0;
-        &:before {
-          display: none;
-        }
-      }
-      &:before {
-        display: inline-block;
-        position: absolute;
-        top: 7px;
-        right: 4px;
-        width: 4px;
-        height: 5px;
-        background: url(../images/common/icon-page-right-gray.svg) center center / 100% 100% no-repeat;
-        content: "";
-      }
-      @include mq() {
-        margin-bottom: 8px;
-      }
-      a {
-        transition: all .3s;
-        &:hover {
-          opacity: .7;
-        }
-      }
-    }
-  }
-}
-
-
-// Endpage
-.sectionEP {
-  &-head {
-    margin-bottom: 40px; 
-    &--order {
-      &-wrap {
-        margin-left: auto;
-        display: flex;
-        align-items: center;
-      }
-      &-label {
-        margin-right: 10px;
-        font-size: fs(12);
-        font-weight: bold;
-      }
-    }
-  }
-  &-titleWrap {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: baseline;
-    padding-bottom: 25px;
-    @include mq() {
-      padding-bottom: 20px;
-      align-items: center;
-    }
-
-    &:after {
-      display: block;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 6px;
-      background: url(../images/common/bg-line-trans.svg) left bottom/contain repeat-x;
-      content: "";
-    }
-
-    &.type2 {
-      display: block;
-    }
-  }
-  &-sort {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 15px;
-    @include mq() {
-      .tagX-list {
-        margin-bottom: 10px;
-      }
-    }
-  }
-  &-resultSumary {
-    font-size: fs(12);
-    line-height: fs(12);
-    color: #000;
-    @include mq() {
-      font-size: fs(10);
-      line-height: fs(10);
-    }
-  }
-  &-newOrders {
-    width: 160px;
-    margin-left: auto;
-    @include mq() {
-      width: 100%;
-    }
-  }
-}
-
-// Search result 's Message
-.search-msg {
-  margin-bottom: 80px;
-  @include mq() {
-    margin-bottom: 50px;
-  }
-  .titleLv4 {
-    margin-bottom: 5px;
-  }
-  .titleLv5 {
-    font-weight: normal;
-  }
 }
