--- a/src/assets/scss/components/parts/_form.scss
+++ b/src/assets/scss/components/parts/_form.scss
@@ -9,6 +9,29 @@
   position: relative;
 }
 
+.select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+        appearance: none;
+  background: #FAFCD7 url(../images/common/icon-arrow-down-gray.png) right 15px center / 8px 7px no-repeat;
+  font-family: $font-base;
+  &:focus {
+    background: #fff url(../images/common/icon-arrow-up-gray.png) right 15px center / 8px 7px no-repeat;
+    @include mq() {
+      background-position: right 8px center;
+    }
+  }
+
+  &:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #000;
+  }
+
+  &::-ms-expand {
+      display: none;
+  }
+}
+
 .input {
   display: block;
   width: 100%;
@@ -113,99 +136,7 @@
   content: "";
 }
 
-.form-search {
-  .input {
-    margin-bottom: 4px;
-    padding: 10px 40px 10px 16px;
-    cursor: pointer;
-    font-family: $font-base;
-  }
-
-  select {
-    font-weight: bold;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-          appearance: none;
-    background: #FAFCD7 url(../images/common/icon-arrow-down-gray.png) right 15px center / 8px 7px no-repeat;
-    font-family: $font-base;
-    &:focus {
-      background: #fff url(../images/common/icon-arrow-up-gray.png) right 15px center / 8px 7px no-repeat;
-      @include mq() {
-        background-position: right 8px center;
-      }
-    }
-
-    &.active {
-      border-color: #000;
-      color: #000;
-      background: #fff url(../images/common/icon-arrow-down-gray.png) right 15px center / 8px 7px no-repeat;
-      &:focus {
-        background: #fff url(../images/common/icon-arrow-up-gray.png) right 15px center / 8px 7px no-repeat;
-        @include mq() {
-          background-position: right 8px center;
-        }
-      }
-    }
-
-    &:-moz-focusring {
-      color: transparent;
-      text-shadow: 0 0 0 #000;
-    }
-
-    &::-ms-expand {
-        display: none;
-    }
-  }
-
-  .btn-gray {
-    width: 49%;
-  }
-}
-
-.selectMulti {
-  width: auto;
-  min-width: 100px;
-  padding: 12px 46px 12px 16px;
-  height: 48px;
-  font-weight: bold;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-        appearance: none;
-  font-family: $font-base;
-  background-image: url(../images/common/icon-arrow-up-gray.png), url(../images/common/icon-arrow-down-gray.png);
-  background-position: right 15px top 10px, right 15px top 28px;
-  background-repeat: no-repeat;
-  background-size: 8px 7px;
-
-  @include mq() {
-    width: 100%;
-  }
-
-  &.active {
-    border-color: #000;
-    color: #000;
-    background-color: #fff;
-    background-image: url(../images/common/icon-arrow-up-gray.png), url(../images/common/icon-arrow-down-gray.png);
-  }
-
-
-  &:-moz-focusring {
-    color: transparent;
-    text-shadow: 0 0 0 #000;
-  }
-
-  &::-ms-expand {
-      display: none;
-  }
-}
-
 .form-action {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
