--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -27,7 +27,8 @@
 
 @import "animations/fadeup";
 // @import "animations/pulse";
-// @import "animations/delay";
+
+@import "animations/delay";
 
 
 
