--- a/src/assets/scss/components/_parts.scss
+++ b/src/assets/scss/components/_parts.scss
@@ -10,652 +10,5 @@
 @import "parts/pagination";
 @import "parts/breadcrumb";
 @import "parts/image";
-
-
-// Tag, Label
-.label {
-  margin-right: 10px;
-  padding: 2px 5px;
-  font-family: $font-a;
-  font-size: fs(10);
-  line-height: fs(15);
-  border: solid 1px #000;
-  background-color: #fff;
-  @include mq() {
-  	padding: 1px 3px;
-  }
-
-  &:last-child {
-    margin-right: 0;
-  }
-}
-
-.tag {
-  display: inline-block;
-  margin-right: 2px;
-  margin-bottom: 5px;
-  padding: 4px 6px;
-  background-color: #EDEBDE;
-  color: #7B7B6C;
-  border-radius: 2px;
-  font-size: fs(12);
-  line-height: fs(18);
-  transition: all .3s;
-
-  &:last-child {
-    margin-right: 0;
-  }
-
-  &:hover {
-    opacity: .7;
-  }
-
-  &.type2 {
-    padding: 2px 8px 1px;
-    background-color: #7B7B6C;
-    color: #fff;
-  }
-}
-
-
-.tagX {
-  position: relative;
-  display: inline-block;
-  margin-right: 5px;
-  margin-bottom: 5px;
-  padding: 2px 25px 1px 8px;
-  background-color: #7B7B6C;
-  color: #fff;
-  border-radius: 2px;
-  font-size: fs(12);
-  line-height: fs(18);
-  transition: all .3s;
-
-  // icon-x-white.svg
-  &:last-child {
-    margin-right: 0;
-  }
-
-  &:hover {
-    opacity: .7;
-  }
-  &-icon {
-    display: inline-block;
-    position: absolute;
-    right: 10px;
-    top: 8px;
-    width: 6px;
-    height: 6px;
-    cursor: pointer;
-    background: url(../images/common/icon-x-white.svg) no-repeat;
-    content: "";
-  }
-  &-list {
-    display: flex;
-    flex-wrap: wrap;
-  }
-}
-
-.label-msg {
-  text-align: center;
-  background: url(../images/common/icon-msg.svg) left center / 100% no-repeat;
-  @include mq() {
-  	background-position: left bottom;
-  }
-  &.ranking {
-    span {
-      background: url(../images/common/icon-ranking.svg) left top 11px / 18px 14px no-repeat;
-    }
-  }
-
-  span {
-    display: inline-block;
-    padding: 10px 0 20px 26px;
-    font-size: fs(12);
-    font-weight: bold;
-    line-height: fs(18);
-    background: url(../images/common/icon-search-black.svg) left top 11px / 14px 14px no-repeat;
-    @include mq() {
-	    padding: 10px 0 18px 26px;
-	  }
-    @include mq(tb) {
-      padding: 10px 0 45px 26px
-    }
-	  @include mq(sm2) {
-	    padding: 10px 0 12px 26px;
-	  }
-    @include mq(sm3) {
-      padding: 10px 0 35px 26px
-    }
-  }
-}
-
-
-// Link, Button, Tab
-.link {
-  display: block;
-  transition: all .3s;
-
-  &:hover {
-    opacity: .7;
-  }
-
-  &.underline {
-    display: inline-block;
-    text-decoration: underline;
-    font-size: fs(14);
-    line-height: 1;
-    color: #7B7B6C;
-    &:hover{
-      text-decoration: none;
-    }
-  }
-}
-
-.link-icon {
-  position: relative;
-  padding-right: 14px;
-  font-size: fs(14);
-  line-height: 1;
-  color: #7B7B6C;
-  transition: all .3s;
-  &:hover{
-    &:after {
-      display: block;
-    }
-  }
-  &:after {
-    display: none;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: calc(100% - 14px);
-    height: 1px;
-    background-color: #7B7B6C;
-    content: "";
-  }
-  &.blank {
-    background: url(../images/common/icon-blank.svg) right center / 12px 12px  no-repeat;
-  }
-  &.pdf {
-    background: url(../images/common/icon-pdf.svg) right center / 11px 13px  no-repeat;
-  }
-  &.excel {
-    background: url(../images/common/icon-excel.svg) right center / 11px 13px  no-repeat;
-  }
-}
-
-.view-more {
-  position: relative;
-  display: inline-block;
-	padding: 0 20px 0 0px;
-  font-size: fs(14);
-  line-height: 1;
-  transition: all .3s;
-  color: #7B7B6C;
-  background: url(../images/common/icon-arrow-right-gray.svg) right center / 10px 10px no-repeat;
-  
-  &:hover{
-    &:after {
-      display: block;
-    }
-  }
-  &:after {
-    display: none;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: calc(100% - 20px);
-    height: 1px;
-    background-color: #7B7B6C;
-    content: "";
-  }
-}
-
-.btn-view-more {
-  display: inline-block;
-  height: 38px;
-  padding: 12px 38px 12px 16px;
-  font-size: fs(14);
-  line-height: 1;
-  border: 1px solid #000;
-  transition: all .3s;
-  background: #fff url(../images/common/icon-arrow-right-black.svg) right 16px center / 10px 10px no-repeat;
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
-    background-image: url(../images/common/icon-arrow-right-white.svg);
-  }
-}
-
-.btn-view-more2 {
-  display: inline-block;
-  height: 56px;
-  padding: 0 76px;
-  font-size: fs(14);
-  font-weight: bold;
-  line-height: 56px;
-  border-radius: 4px;
-  border: solid 1px #fff;
-  background: #fff url(../images/common/icon-arrow-right-black.svg) right 16px center / 10px 10px no-repeat;
-  transition: all .3s;
-
-  &:hover {
-    border-color: #7B7B6C;
-    color: #7B7B6C;
-    background-image: url(../images/common/icon-arrow-right-gray.svg);
-  }
-}
-
-.btn-gray {
-  display: inline-block;
-  width: 125px;
-  height: 38px;
-  line-height: 38px;
-  border-radius: 2px;
-  border: none;
-  background-color: #7B7B6C;
-  color: #fff;
-  font-size: fs(14);
-  text-align: center;
-  transition: all .3s;
-
-  &:hover {
-    opacity: .7;
-  }
-
-  &.sliver {
-    background-color: #C7C7C7;
-
-    &:hover {
-      opacity: .7;
-    }
-  }
-}
-
-.link-viewAll {
-  display: inline-block;
-  padding-top: 24px;
-  font-size: fs(14);
-  font-weight: bold;
-  color: #7B7B6C;
-  background: url(../images/common/icon-all.svg) no-repeat top center;
-  background-size: 18px 18px;
-}
-
-.link-go {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  border: solid 1px #7B7B6C;
-  border-radius: 50%;
-  transition: all .3s;
-  &:hover {
-    opacity: .7;
-  }
-  &:before {
-    display: inline-block;
-    position: absolute;
-    top: calc(50% - 6px);
-    left: calc(50% - 5px);
-    width: 12px;
-    height: 12px;
-    background: url(../images/common/icon-page-right-gray.svg) center center / 100% 100% no-repeat;
-    content: "";
-  }
-}
-
-.btn-close {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  border: solid 1px #7B7B6C;
-  border-radius: 50%;
-  transition: all .3s;
-  &:hover {
-    opacity: .7;
-  }
-  &:before {
-    display: inline-block;
-    position: absolute;
-    top: calc(50% - 5px);
-    left: calc(50% - 5px);
-    width: 10px;
-    height: 10px;
-    background: url(../images/common/icon-close.svg) center center / 100% 100% no-repeat;
-    content: "";
-  }
-}
-
-.tabs {
-	&-listWrap {
-    margin-bottom: 30px;
-    @include mq() {
-	    margin-right: -12px;
-      display: block;
-      overflow-x: auto;
-      white-space: nowrap;
-    }
-	}
-  &-list {
-    display: flex;
-    flex-wrap: wrap;
-    @include mq() {
-      display: inline-block;
-    }
-  }
-
-  &-item {
-    display: block;
-    width: 19.6%;
-  	margin-right: 5px;
-  	margin-bottom: 10px;
-    padding: 5px;
-    font-size: fs(12);
-    line-height: fs(18);
-    font-weight: bold;
-    border-radius: 30px;
-    color: #000;
-    background-color: #fff;
-    border: 1px solid #000;
-    text-align: center;
-    transition: all .3s;
-    &:nth-child(5n) {
-    	margin-right: 0;
-    	@include mq() {
-	    	margin-right: 5px;
-    	}
-    }
-    @include mq() {
-      display: inline-block;
-    	width: 146px;
-    	max-width: 200px;
-    }
-
-    &.active {
-      color: #fff;
-      background-color: #000;
-    }
-
-    &:hover {
-      color: #fff;
-      background-color: #000;
-    }
-  }
-}
-
-.btn-clip {
-  display: block;
-  width: 124px;
-  height: 38px;
-  line-height: 38px;
-  background-color: #369ED5;
-  color: #fff;
-  border-radius: 2px;
-  text-align: center;
-  &.active {
-    background-color: #EB6A6A;
-  }
-  span {
-    display: inline-block;
-    padding-left: 20px;
-    font-size: fs(12);
-    font-weight: bold;
-    background: url(../images/common/icon-lock-white.svg) left center no-repeat;
-  }
-}
-
-// socialBox
-.socialBox {
-  display: flex;
-  justify-content: center;
-  &-item {
-    width: 50px;
-    height: 50px;
-    margin-right: 24px;
-    @include mq() {
-      margin-right: 60px;
-    }
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-}
-
-
-
-// Pickup, Item
-
-.pickup {
-  position: relative;
-  padding-bottom: 20px;
-
-  @include mq() {
-    margin-bottom: 20px;
-    padding-bottom: 25px;
-  }
-
-  &:before {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 6px;
-    background: url(../images/common/bg-line-black.jpg) left bottom / contain repeat-x;
-    content: "";
-  }
-
-  &-thumb {
-    &.big {
-      position: relative;
-
-      &:before {
-        position: absolute;
-        top: -15px;
-        left: -15px;
-        width: 90px;
-        height: 90px;
-        display: block;
-        background: url(../images/common/icon-pickup01.svg) left center no-repeat;
-        content: "";
-
-        @include mq() {
-          top: -13px;
-          left: -12px;
-          width: 68px;
-          height: 68px;
-          background-size: contain;
-        }
-      }
-
-      &:after {
-        position: absolute;
-        right: -15px;
-        bottom: -15px;
-        width: 90px;
-        height: 90px;
-        display: block;
-        background: url(../images/common/icon-pickup02.svg) left center no-repeat;
-        content: "";
-
-        @include mq() {
-          bottom: -12px;
-          right: -12px;
-          width: 68px;
-          height: 68px;
-          background-size: contain;
-        }
-      }
-    }
-  }
-
-  &-title {
-    margin: 15px 0 5px;
-    font-weight: bold;
-    font-size: fs(14);
-    line-height: fs(21);
-
-    @include mq() {
-			margin: 5px 0 0px;
-      font-size: fs(12);
-      line-height: fs(18);
-    }
-
-    &.big {
-      margin: 20px 0;
-      font-size: fs(18);
-      line-height: fs(27);
-
-      @include mq() {
-        margin: 20px 0 10px;
-        font-size: fs(16);
-        line-height: fs(24);
-      }
-    }
-  }
-
-  &-infor {
-    span {
-      position: relative;
-      display: inline-block;
-      padding-right: 10px;
-      font-size: fs(12);
-      line-height: fs(18);
-      color: #7B7B6C;
-
-      &:after {
-        position: absolute;
-        right: -2px;
-        top: 2px;
-        display: inline-block;
-        width: 1px;
-        height: 12px;
-        background-color: #C7C7C7;
-        content: "";
-      }
-
-      &:last-child {
-        &:after {
-          display: none;
-        }
-      }
-
-      &.time {
-        margin-left: 10px;
-        padding-left: 15px;
-        background: url(../images/common/icon-time.svg) left top 2px / 12px 12px no-repeat;
-      }
-
-      &.kcal {
-        margin-left: 10px;
-        padding-left: 15px;
-        background: url(../images/common/icon-kcal.svg) left top 2px / 12px 12px no-repeat;
-      }
-    }
-  }
-}
-
-.recipe-item {
-  display: inline-block;
-  padding-left: 20px;
-  font-size: fs(14);
-  line-height: fs(21);
-  font-weight: bold;
-  color: #CCBC4F;
-  background: url(../images/common/icon-kcal-yellow.svg) left center / 12px 22px no-repeat;
-  &.time {
-    padding-left: 28px;
-    background: url(../images/common/icon-time-yellow.svg) left center / 20px 22px no-repeat;
-  }
-}
-
-//  pickup List
-.pickupList {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 -8px;
-  padding-top: 20px;
-  @include mq() {
-    margin: 0 -10px;
-    padding-top: 18px;
-  }
-  &-item {
-    width: 33.33%;
-    padding: 0 8px;
-    margin-bottom: 20px;
-    @include mq() {
-      width: 50%;
-      padding: 0 10px;
-    }
-    a {
-      display: block;
-    }
-  }
-  &-thumb {
-    position: relative;
-
-    &:before {
-      position: absolute;
-      top: 0;
-      left: 0;
-      display: inline-block;
-      width: 30px;
-      height: 30px;
-      font-size: fs(14);
-      font-weight: bold;
-      font-family: $font-b;
-      line-height: 30px;
-      text-align: center;
-      color: #fff;
-      background-color: #000;
-      content: attr(data-id);
-    }
-  }
-  &-des {
-    margin-top: 10px;
-  }
-  &-infor {
-    margin-top: 10px;
-    font-size: fs(12);
-    line-height: fs(12);
-    color: #7B7B6C;
-  }
-}
-
-// pickup suggest List
-.pickup-suggest {
-  .titleLv2 {
-    margin-bottom: 40px;
-    @include mq() {
-      margin-bottom: 30px;
-    }
-  }
-  &--list {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -10px;
-    @include mq() {
-      margin: 0 -5px;
-    }
-    li {
-      width: 25%;
-      margin-bottom: 15px;
-      padding: 0 10px;
-      @include mq() {
-        width: 50%;
-        padding: 0 5px;
-      }
-    }
-    .date {
-      margin-top: 10px;
-    }
-    .pickup-title {
-      margin-top: 8px;
-    }
-  }
-
-}
+@import "parts/pagetop";
+@import "parts/accordion";
