--- a/src/assets/scss/components/parts/_table.scss
+++ b/src/assets/scss/components/parts/_table.scss
@@ -4,9 +4,15 @@
 // ===========================
 
 .table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  width: 100%;
+  @include mq(sm2) {
+    overflow-x: auto;
+  }
+
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+  }
 
   th {
     background-color: #F2F5F7;
@@ -22,4 +28,13 @@
     box-sizing: border-box;
     padding: 20px 15px;
 	}
+
+  &.type2 {
+    table {
+      @include mq(sm2) {
+        width: 220vw;
+      }
+    }
+  }
+  
 }
