--- a/src/assets/scss/components/parts/_text.scss
+++ b/src/assets/scss/components/parts/_text.scss
@@ -200,6 +200,23 @@
   }
 }
 
+.label {
+  margin-right: 10px;
+  padding: 2px 5px;
+  font-family: $font-a;
+  font-size: fs(10);
+  line-height: fs(15);
+  border: solid 1px #000;
+  background-color: #fff;
+  @include mq() {
+    padding: 1px 3px;
+  }
+
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
 
 /* -------------------
   Link, Button, Tab
@@ -254,6 +271,39 @@
   }
   &.excel {
     background: url(../images/common/icon-excel.svg) right center / 11px 13px  no-repeat;
+  }
+}
+
+.link-viewAll {
+  display: inline-block;
+  padding-top: 24px;
+  font-size: fs(14);
+  font-weight: bold;
+  color: #7B7B6C;
+  background: url(../images/common/icon-all.svg) no-repeat top center;
+  background-size: 18px 18px;
+}
+
+.link-go {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border: solid 1px #7B7B6C;
+  border-radius: 50%;
+  transition: all .3s;
+  &:hover {
+    opacity: .7;
+  }
+  &:before {
+    display: inline-block;
+    position: absolute;
+    top: calc(50% - 6px);
+    left: calc(50% - 5px);
+    width: 12px;
+    height: 12px;
+    background: url(../images/common/icon-page-right-gray.svg) center center / 100% 100% no-repeat;
+    content: "";
   }
 }
 
@@ -320,7 +370,7 @@
   }
 }
 
-.btn-gray {
+.btn {
   display: inline-block;
   width: 125px;
   height: 38px;
@@ -337,45 +387,12 @@
     opacity: .7;
   }
 
-  &.sliver {
+  &.type2 {
     background-color: #C7C7C7;
 
     &:hover {
       opacity: .7;
     }
-  }
-}
-
-.link-viewAll {
-  display: inline-block;
-  padding-top: 24px;
-  font-size: fs(14);
-  font-weight: bold;
-  color: #7B7B6C;
-  background: url(../images/common/all-icon.svg) no-repeat top center;
-  background-size: 18px 18px;
-}
-
-.link-go {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  border: solid 1px #7B7B6C;
-  border-radius: 50%;
-  transition: all .3s;
-  &:hover {
-    opacity: .7;
-  }
-  &:before {
-    display: inline-block;
-    position: absolute;
-    top: calc(50% - 6px);
-    left: calc(50% - 5px);
-    width: 12px;
-    height: 12px;
-    background: url(../images/common/icon-page-right-gray.svg) center center / 100% 100% no-repeat;
-    content: "";
   }
 }
 
@@ -401,6 +418,10 @@
     content: "";
   }
 }
+
+/* -------------------
+  Group button
+--------------------*/
 
 .post-ctrl {
   position: relative;
