--- a/src/assets/scss/components/parts/_layout.scss
+++ b/src/assets/scss/components/parts/_layout.scss
@@ -80,6 +80,7 @@
 		margin-bottom: 20px;
 		@include mq(sm2) {
 			width: 100%;
+			padding: 0;
 		}
 		&--inner {
 			display: block;
@@ -101,6 +102,7 @@
 		margin-bottom: 20px;
 		@include mq(sm2) {
 			width: 100%;
+			padding: 0;
 		}
 		&--inner {
 			display: block;
@@ -122,6 +124,7 @@
 		margin-bottom: 20px;
 		@include mq(sm2) {
 			width: 100%;
+			padding: 0;
 		}
 		&--inner {
 			display: block;
@@ -143,6 +146,7 @@
 		margin-bottom: 20px;
 		@include mq(sm2) {
 			width: 100%;
+			padding: 0;
 		}
 		&--inner {
 			display: block;
