--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -16,8 +16,8 @@
 // @import "libs/remodal";
 // @import "libs/remodal-default-theme";
 // @import "libs/custom-remodal";
-// @import "libs/slick";
-// @import "libs/custom-slick";
+@import "libs/slick";
+@import "libs/custom-slick";
 
 
 
