--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -7,8 +7,6 @@ html,
 body,
 div,
 span,
-applet,
-iframe,
 h1,
 h2,
 h3,
@@ -16,34 +14,11 @@ h4,
 h5,
 h6,
 p,
-blockquote,
-pre,
 a,
-abbr,
-acronym,
 address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
 img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
 u,
 i,
-center,
 dl,
 dt,
 dd,
@@ -53,7 +28,6 @@ li,
 fieldset,
 form,
 label,
-legend,
 table,
 caption,
 tbody,
@@ -71,15 +45,10 @@ figure,
 figcaption,
 footer,
 header,
-hgroup,
 menu,
 nav,
 output,
-ruby,
 section,
-summary,
-time,
-mark,
 audio,
 video {
   margin: 0;
@@ -454,7 +423,7 @@ textarea {
 }
 
 img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   vertical-align: middle;
 }
@@ -812,7 +781,6 @@ textarea {
   }
 
   img {
-    width: auto;
     max-width: 100%;
     height: auto;
   }
