--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -6,8 +6,6 @@ html,
 body,
 div,
 span,
-applet,
-iframe,
 h1,
 h2,
 h3,
@@ -15,34 +13,11 @@ h4,
 h5,
 h6,
 p,
-blockquote,
-pre,
 a,
-abbr,
-acronym,
 address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
 img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
 u,
 i,
-center,
 dl,
 dt,
 dd,
@@ -52,7 +27,6 @@ li,
 fieldset,
 form,
 label,
-legend,
 table,
 caption,
 tbody,
@@ -70,15 +44,10 @@ figure,
 figcaption,
 footer,
 header,
-hgroup,
 menu,
 nav,
 output,
-ruby,
 section,
-summary,
-time,
-mark,
 audio,
 video {
   margin: 0;
@@ -389,7 +358,7 @@ textarea {
   text-shadow: none; }
 
 img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   vertical-align: middle; }
 
@@ -2018,7 +1987,6 @@ textarea {
   border: 2px inset; }
 
 .no-reset img {
-  width: auto;
   max-width: 100%;
   height: auto; }
 
@@ -5477,15 +5445,13 @@ body {
     margin: 0 1.5rem;
     width: auto; } }
 
-/* -------------------
+@-moz-document url-prefix() {}/* -------------------
   OBJECT FIT FOR IE
 --------------------*/
-.coverBox .cover {
+.cover {
+  width: 100%;
   height: 100%;
   object-fit: cover;
   font-family: 'object-fit: cover;'; }
-
-.coverBox {
-  overflow: hidden; }
 
 /*# sourceMappingURL=../maps/index.css.map */
