--- a/src/assets/scss/hackcss/_objectfit.scss
+++ b/src/assets/scss/hackcss/_objectfit.scss
@@ -4,22 +4,29 @@
 --------------------*/
 // How to use: add class ".cover" for img tag, and class wrapper is ".coverBox"
 
-.coverBox .cover {
+.cover {
+	width: 100%;	
 	height: 100%;
 	object-fit: cover;
   font-family: 'object-fit: cover;';
 }
 
-.coverBox {
-	overflow: hidden;
-	// height: 266px;
-	// @include mq(){
-	// 	height: 216px;
-	// }
-	// &.type2 {
-	// 	height: 200px;
-	// 	@include mq(){
-	// 		height: 144px;
-	// 	}
-	// }
-}
+// .coverBox .cover {
+// 	height: 100%;
+// 	object-fit: cover;
+//   font-family: 'object-fit: cover;';
+// }
+
+// .coverBox {
+// 	overflow: hidden;
+// 	// height: 266px;
+// 	// @include mq(){
+// 	// 	height: 216px;
+// 	// }
+// 	// &.type2 {
+// 	// 	height: 200px;
+// 	// 	@include mq(){
+// 	// 		height: 144px;
+// 	// 	}
+// 	// }
+// }
