--- a/src/assets/scss/base/_mixin.scss
+++ b/src/assets/scss/base/_mixin.scss
@@ -4,6 +4,13 @@
 --------------------*/
 
 // =========================================
+// px to vw
+// =========================================
+@function vw($size) {
+  @return $size / 1600 * 100vw;
+}
+
+// =========================================
 // Font size for px to rem
 // =========================================
 @function fs($size) {
