--- a/src/assets/scss/animations/_fadein.scss
+++ b/src/assets/scss/animations/_fadein.scss
@@ -1,37 +1,8 @@
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
+/* Fade up on scroll */
+.fadein {
+  opacity: 0;
+  transition: opacity 2s cubic-bezier(0.165, 0.84, 0.44, 1) 0s;
+  &.in {
     opacity: 1;
-  }
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-.fadeIn {
-  -ms-interpolation-mode: bicubic;
-  -webkit-animation: fadeIn 1.3s;
-  -moz-animation: fadeIn 1.3s;
-  animation: fadeIn 1.3s;
-}
-
-.fadeIn-delay {
-  display: none;
-  &.active {
-    display: block;
-    -ms-interpolation-mode: bicubic;
-    -webkit-animation: fadeIn 1s;
-    -moz-animation: fadeIn 1s;
-    animation: fadeIn 1s;
   }
 }
