--- a/src/assets/scss/libs/_slick.scss
+++ b/src/assets/scss/libs/_slick.scss
@@ -98,3 +98,49 @@
 .slick-arrow.slick-hidden {
     display: none;
 }
+
+
+.slick-dots {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+  li {
+    margin-right: 14px;
+    &:last-child {
+      margin-right: 0;
+    }
+    button {
+      position: relative;
+      display: inline-block;
+      width: 12px;
+      height: 12px;
+      font-size: 0;
+      border: solid 1px #76C4EA;
+      background-color: #76C4EA;
+      border-radius: 50%;
+      &:before {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        display: inline-block;
+        width: 8px;
+        height: 8px;
+        background-color: #EEEEEE;
+        border-radius: 50%;
+        content: "";
+      }
+    }
+    &.slick-active {
+      button {
+        border-color: #fff;
+        &:before {
+          width: 6px;
+          height: 6px;
+          background-color: #fff;
+        }
+      }
+    }
+  }
+}
