--- a/src/assets/scss/animations/_fadeup.scss
+++ b/src/assets/scss/animations/_fadeup.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/* Fade up on scroll */
+/* Fade up */
 .fadeup {
   opacity: 0;
   transform: translate(0, 80px);
@@ -9,35 +9,4 @@
     opacity: 1;
     transform: translate(0, 0);
   }
-}
-
-
-
-/* Fade up on load */
-@-webkit-keyframes fadeup2 {
-  0% {
-    opacity: 0;
-    transform: translate(0, 80px);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes fadeup2 {
-  0% {
-    opacity: 0;
-    transform: translate(0, 80px);
-  }
-  100% {
-    opacity: 1;
-    transform: translate(0, 0);
-  }
-}
-
-.fadeup2 {
-  opacity: 1;
-  transform: translate(0, 0);
-  animation: fadeup2 1s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
