--- a/src/assets/scss/animations/_delay.scss
+++ b/src/assets/scss/animations/_delay.scss
@@ -47,6 +47,53 @@
   transition-delay: 1.2s;
 }
 
+.delay-13 {
+  transition-delay: 1.3s;
+}
+
+.delay-14 {
+  transition-delay: 1.4s;
+}
+
+.delay-15 {
+  transition-delay: 1.5s;
+}
+
+.delay-16 {
+  transition-delay: 1.6s;
+}
+
+.delay-17 {
+  transition-delay: 1.7s;
+}
+
+.delay-18 {
+  transition-delay: 1.8s;
+}
+
+.delay-19 {
+  transition-delay: 1.9s;
+}
+
+.delay-20 {
+  transition-delay: 2.0s;
+}
+
+.delay-21 {
+  transition-delay: 2.1s;
+}
+
+.delay-22 {
+  transition-delay: 2.2s;
+}
+
+.delay-23 {
+  transition-delay: 2.3s;
+}
+
+.delay-24 {
+  transition-delay: 2.4s;
+}
 
 // animation delay
 .ani-delay-1 {
@@ -95,4 +142,52 @@
 
 .ani-delay-12 {
   animation-delay: 1.2s;
+}
+
+.ani-delay-13 {
+  animation-delay: 1.3s;
+}
+
+.ani-delay-14 {
+  animation-delay: 1.4s;
+}
+
+.ani-delay-15 {
+  animation-delay: 1.5s;
+}
+
+.ani-delay-16 {
+  animation-delay: 1.6s;
+}
+
+.ani-delay-17 {
+  animation-delay: 1.7s;
+}
+
+.ani-delay-18 {
+  animation-delay: 1.8s;
+}
+
+.ani-delay-19 {
+  animation-delay: 1.9s;
+}
+
+.ani-delay-20 {
+  animation-delay: 2.0s;
+}
+
+.ani-delay-21 {
+  animation-delay: 2.1s;
+}
+
+.ani-delay-22 {
+  animation-delay: 2.2s;
+}
+
+.ani-delay-23 {
+  animation-delay: 2.3s;
+}
+
+.ani-delay-24 {
+  animation-delay: 2.4s;
 }
