--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -18,6 +18,7 @@
 // @import "libs/custom-remodal";
 @import "libs/slick";
 @import "libs/custom-slick";
+@import "libs/animate-min";
 
 
 
@@ -27,8 +28,8 @@
 
 @import "animations/fadeup";
 // @import "animations/pulse";
-
 @import "animations/delay";
+
 
 
 
