--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2012,7 +2012,8 @@ textarea {
   COMMON
 --------------------*/
 body {
-  font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif; }
+  font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体", "ヒラギノ角ゴ Pro W3", "メイリオ", sans-serif;
+  font-weight: 500; }
   body.fixed {
     height: 100vh;
     overflow: hidden; }
@@ -4497,6 +4498,157 @@ Copyright (c) 2013 Daniel Eden
   -webkit-animation-name: zoomOutUp;
   animation-name: zoomOutUp; }
 
+.delay-1 {
+  transition-delay: .1s; }
+
+.delay-2 {
+  transition-delay: .2s; }
+
+.delay-3 {
+  transition-delay: .3s; }
+
+.delay-4 {
+  transition-delay: .4s; }
+
+.delay-5 {
+  transition-delay: .5s; }
+
+.delay-6 {
+  transition-delay: .6s; }
+
+.delay-7 {
+  transition-delay: .7s; }
+
+.delay-8 {
+  transition-delay: .8s; }
+
+.delay-9 {
+  transition-delay: .9s; }
+
+.delay-10 {
+  transition-delay: 1s; }
+
+.delay-11 {
+  transition-delay: 1.1s; }
+
+.delay-12 {
+  transition-delay: 1.2s; }
+
+.delay-13 {
+  transition-delay: 1.3s; }
+
+.delay-14 {
+  transition-delay: 1.4s; }
+
+.delay-15 {
+  transition-delay: 1.5s; }
+
+.delay-16 {
+  transition-delay: 1.6s; }
+
+.delay-17 {
+  transition-delay: 1.7s; }
+
+.delay-18 {
+  transition-delay: 1.8s; }
+
+.delay-19 {
+  transition-delay: 1.9s; }
+
+.delay-20 {
+  transition-delay: 2.0s; }
+
+.delay-21 {
+  transition-delay: 2.1s; }
+
+.delay-22 {
+  transition-delay: 2.2s; }
+
+.delay-23 {
+  transition-delay: 2.3s; }
+
+.delay-24 {
+  transition-delay: 2.4s; }
+
+.ani-delay-1 {
+  animation-delay: .1s; }
+
+.ani-delay-2 {
+  animation-delay: .2s; }
+
+.ani-delay-3 {
+  animation-delay: .3s; }
+
+.ani-delay-4 {
+  animation-delay: .4s; }
+
+.ani-delay-5 {
+  animation-delay: .5s; }
+
+.ani-delay-6 {
+  animation-delay: .6s; }
+
+.ani-delay-7 {
+  animation-delay: .7s; }
+
+.ani-delay-8 {
+  animation-delay: .8s; }
+
+.ani-delay-9 {
+  animation-delay: .9s; }
+
+.ani-delay-10 {
+  animation-delay: 1s; }
+
+.ani-delay-11 {
+  animation-delay: 1.1s; }
+
+.ani-delay-12 {
+  animation-delay: 1.2s; }
+
+.ani-delay-13 {
+  animation-delay: 1.3s; }
+
+.ani-delay-14 {
+  animation-delay: 1.4s; }
+
+.ani-delay-15 {
+  animation-delay: 1.5s; }
+
+.ani-delay-16 {
+  animation-delay: 1.6s; }
+
+.ani-delay-17 {
+  animation-delay: 1.7s; }
+
+.ani-delay-18 {
+  animation-delay: 1.8s; }
+
+.ani-delay-19 {
+  animation-delay: 1.9s; }
+
+.ani-delay-20 {
+  animation-delay: 2.0s; }
+
+.ani-delay-21 {
+  animation-delay: 2.1s; }
+
+.ani-delay-22 {
+  animation-delay: 2.2s; }
+
+.ani-delay-23 {
+  animation-delay: 2.3s; }
+
+.ani-delay-24 {
+  animation-delay: 2.4s; }
+
+/* Fade in */
+.fadein {
+  opacity: 0;
+  transition: opacity 2s cubic-bezier(0.165, 0.84, 0.44, 1) 0s; }
+  .fadein.in {
+    opacity: 1; }
+
 /* Fade up */
 .fadeup {
   opacity: 0;
@@ -4505,6 +4657,31 @@ Copyright (c) 2013 Daniel Eden
   .fadeup.in {
     opacity: 1;
     transform: translate(0, 0); }
+
+@-webkit-keyframes ani-pulse {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale3d(0.3, 0.3, 0.3);
+    transform: scale3d(0.3, 0.3, 0.3); }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); } }
+
+@keyframes ani-pulse {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale3d(0.3, 0.3, 0.3);
+    transform: scale3d(0.3, 0.3, 0.3); }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1); } }
+
+.ani-pulse {
+  opacity: 1;
+  transform: scale3d(1, 1, 1);
+  animation: ani-pulse 0.8s cubic-bezier(0.165, 0.84, 0.44, 1); }
 
 .delay-1 {
   transition-delay: .1s; }
@@ -5782,9 +5959,6 @@ Copyright (c) 2013 Daniel Eden
 
 /* -------------------
   FOOTER
---------------------*/
-/* -------------------
-  TOP PAGE
 --------------------*/
 /* -------------------
   CONTACT PAGE
@@ -7809,6 +7983,12 @@ Copyright (c) 2013 Daniel Eden
     margin: 0 1.5rem;
     width: auto; } }
 
+/* -------------------
+  PAGE NAME
+--------------------*/
+/* -------------------
+  TOP PAGE
+--------------------*/
 @-moz-document url-prefix() {}/* -------------------
   OBJECT FIT FOR IE
 --------------------*/
